# sandbox

./: .gitignore
arch/: Makefile  access_same_variable.c  experiment.bash  raw.c  raw_war.c  stats.py  war.c
autotools/: README.md  configure.in  main.c
compilers/: 1-base-example.asm  1-base-example.c  2-variable-array.c  3-expr.asm  4-lambda-example.cc  5-lambda2.asm  5-lambda2.cc  prog.cc
compilers/pres-code/: 1-stack-control.asm  2-nesting.asm  3-lambda.asm  A-multiply.c  B-first-lambda.cc  C-second-lambda.cc  Makefile  (+1 more)
complex_nets/: Makefile  lista1.ipynb  lista2.ipynb  lista3.ipynb  lista4.ipynb  nonlinear_barabasi.c
cuda/: .gitignore  matrix.cu  observations.md  testgpu.cu  vecsum.cu
ipc/: pipe.c  signal.c
jquery/: page.html
kernel_train/: Makefile  README.md  mymodule-1.c  mymodule-2.c  mymodule.c
lex/: lex  lex.yy  lex.yy.c
node/: app.js  mod1.js  mod2.js
pascal/: prog.pas
peterson_algorithm/: prog.cpp
plots/: README  cute_boxplot.py  music_plot  project_schedule.py
posix_semaphore/: prog.cpp
pthreads/: Makefile  mutex.c  semaphore.c
scripts/: elf_avg  elf_ls  elf_qpop  elf_qpush  elf_sendip  elf_stats  elf_wget
statistics/: grouped_barplot.py  markov_discrete.ipynb
tcc-presentation/: plot1.r  plot2.r  plot3.r  plot4.r
thread_pool/: main.cpp  thread_pool.pro
vtk/: hpProteinPlotter.py
wikimedia/: Makefile  scale-parameter.r  scale-parameter2.r
wikipedia/: colors.csv  colors2.csv  processing_colors.ipynb
wikipedia/arnold/: CMakeLists.txt  circle_map.cc  circle_map.r  rotation_number.cc  rotation_number.r  view_matrix.cc
(+79 files in other folders)
