#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([elf-autotools], [1.0], [matsaldanha@hotmail.com])
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADER(
	[cblas.h],
	[AC_DEFINE(
	 	HAVE_STDIO_H,
		1,
		[Define to 1 if you have <cblas.h>]
	)],
	[AC_MSG_ERROR([Could not find cblas.h])]
)

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
