cmake_minimum_required(VERSION 2.8)
project( CircleMap )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( prog circle_map.cc )
add_executable( prog2 rotation_number.cc )
target_link_libraries( prog ${OpenCV_LIBS} )
target_link_libraries( prog2 ${OpenCV_LIBS} )
